# esb-bridge

./: Cargo.toml  Dockerfile  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: go-build-rpc-server.yml
cmd/server/: main.go
esbbridge/: esbbridge.go  esbbridge_test.go
internal/usbprotocol/: usbprotocol.go  usbprotocol_test.go
pkg/client/: client.go  client_test.go
pkg/esbbridge/: esbbridge.go  esbbridge_test.go
pkg/esbbridgeclient/: esbbridgeclient.go  esbbridgeclient_test.go
pkg/server/: esbbridge_rpc.pb.go  esbbridge_rpc.proto  esbbridge_rpc_grpc.pb.go  server.go
pkg/server/service/: esbbridge_rpc.pb.go  esbbridge_rpc.proto  esbbridge_rpc_grpc.pb.go
src/: esb.rs  lib.rs
src/bridge/: mod.rs  usb_protocol.rs
src/esb_bridge/: mod.rs
src/server/: mod.rs  usb_protocol.rs  usbprotocol.rs
usbprotocol/: usbprotocol.go  usbprotocol_test.go
