[package]
name = "esb-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc16 = "*"
clap = { version = "3.1.12", features = ["derive"] }
serialport = { version = "4.3.0", default-features = false }

